Editing theproject page

--- a/random-player-ggd/index.html
+++ b/random-player-ggd/index.html
@@ -6,5 +6,11 @@ layout: page
 
   <h1>Random Video Player - Intro</h1>
 
+  <p>This project is based off of <a href="http://randombeyonce.com">randombeyonce.com</a>. It pulls in a list of VEVO videos, suffles them and then plays one at random. This the absolute beginning level of the project. It introduces new developers to basic object-oriented programming, JSON objects, and pulling in APIs.</p>
+
+  <h3>Files</h3>
+  <ul>
+    <li><a href="http://www.haileymahan.com/projects/random-video-no-js.zip" download="random-videos-no-js.zip">Project with no Javascript</a></li>
+
 
 </div>
