Adding link to slides

--- a/random-player-ggd/index.html
+++ b/random-player-ggd/index.html
@@ -11,6 +11,7 @@ layout: page
   <h1>Files</h1>
   <ul class="list">
     <li class="list_item"><a href="http://www.haileymahan.com/projects/random-video-no-js.zip" download="random-videos-no-js.zip">Project with no Javascript</a></li>
+    <li class="list_item"><a href="http://slides.com/haileymahan/girl-geek-dinner/live">Deck</a></li>
 
 
 </div>
